--- a/site/index.html
+++ b/site/index.html
@@ -1,10 +1,70 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<title>Coursera is cool</title>
+<style>
+body {
+  background-color: lightblue;
+}
+
+img {
+  text-align: center;
+  } 
+
+p {
+  text-align: center;
+  color: blueviolet;
+} 
+p:hover {
+  background-color: darkred;
+  color: darkgreen;
+}
+
+p2 {
+  text-align: lef;
+  color: black;
+} 
+p2:hover {
+  background-color: hotpink;
+  color: yellow;
+}
+
+b img {
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  width: 350px;
+}
+
+b img:hover {
+  box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+}
+
+c img {
+  border-radius: 50%;
+}
+</style>
 </head>
 <body>
-<h1>Coursera is cool. I love you<hi>
+
+<p>Jeg elsker løver</p>
+<p id="para1">dette er en løve!</p>
+<p>den er farlig</p>
+
+
+<b>
+<a href="https://upload.wikimedia.org/wikipedia/commons/7/73/Lion_waiting_in_Namibia.jpg">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/7/73/Lion_waiting_in_Namibia.jpg" alt="Løve">
+</a>
+
+<a href="https://upload.wikimedia.org/wikipedia/commons/b/bd/Lascaux-diverticule-f%C3%A9lins.jpg">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/b/bd/Lascaux-diverticule-f%C3%A9lins.jpg" alt="Løve2">
+</a>
+</b>
+
+<c>
+<a href="https://upload.wikimedia.org/wikipedia/commons/0/06/Asiatic_african_lions.jpg">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/0/06/Asiatic_african_lions.jpg" alt="Løve3">
+</a>
+</c>
 </body>
 </html>
